--- a/hf-backend/requirements.txt
+++ b/hf-backend/requirements.txt
@@ -1,12 +1,11 @@
-fastapi
-uvicorn
-pillow
-torch
+gradio==4.31.3
 transformers
+torch
+Pillow
 sentence-transformers
-huggingface_hub
-python-multipart
-numpy
 faiss-cpu
-scikit-learn
+huggingface-hub
+opencv-python
 requests
+numpy
+scikit-learn
